--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <div id="container">
     <div id="timer">0.0</div>
-    <ul id="board">
+    <ul id="board"></ul>
     <div id="btn">START</div>
   </div>
-  
+
   <script src="js/main.js"></script>
 </body>
 </html>
